# ProcTracker

./: .clang-format  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
CMake/: EmbedInSource.cmake  EmbeedInSource.cmake  ProcTrackerFunctions.cmake
Sources/: CMakeLists.txt  Main.cpp  OS.hpp  OS.windows.cpp  Pch.hpp  PerformanceQuery.cpp  PerformanceQuery.hpp  PerformanceQuery.windows.cpp  Process.cpp  Process.hpp  ProcessDrawer.cpp  ProcessDrawer.hpp  RingBuffer.hpp  SystemSpecs.hpp  SystemSpecs.windows.cpp  SystemWatcher.cpp  SystemWatcher.hpp  SystemWatcher.windows.cpp
Sources/DearImGui/: imconfig.h
Sources/EmbeedInSourceTemplate/: BinarySourceFileTemplate.cpp.in  BinarySourceFileTemplate.hpp.in
Sources/Handle/: Handle.hpp  HandleQuery.hpp  HandleQuery.windows.cpp
